# falsework

./: .gitignore  Cargo.toml  LICENSE  README.md
.example/: main.rs
.github/workflows/: coverage.yml
src/: app.rs  cmd.rs  lib.rs  main.rs
tests/: test.rs
